# rasmitha

./: .env  FMNIST_CNN_ResNetCNN_WnB.ipynb  FMNIST_CNN_WnB.ipynb  README.md  app.py  docker-compose.yml  home.py  index.html  requirements.txt
apps/streamlit/: Home.py
maintenance_workorder/: README.md  app.py
maintenance_workorder/instance/: workorders.db
pages/: 1_Data.py  2_Kinetics.py  3_Reactors.py  4_Solver.py  5_Plots.py  6_Analytics.py
pharmasim/: __init__.py  cli.py  engine.py  pd.py  pk.py  regimen.py
prmae/: README.md  pyproject.toml  requirements.txt  setup.cfg
prmae/prmae/cli/: compare.py  evaluate.py  report.py  train.py
prmae/prmae/data/: loaders.py  power_curve.py
prmae/prmae/evaluation/: metrics.py
prmae/prmae/losses/: losses.py
prmae/prmae/models/: catboost_specialist.py  pinn_blocks.py  prmae_model.py
prmae/prmae/training/: datamodules.py  trainers.py
prmae/prmae/utils/: common.py
reactorsim/: __init__.py  analytics.py  cli.py  core.py  data.py  kinetics.py  reactors.py  solver.py
services/api/: Dockerfile  pyproject.toml
services/api/mes_api/: crud.py  db.py  main.py  models.py  routers.py  schemas.py  settings.py
services/api/mes_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/builder/: Dockerfile  pyproject.toml
services/builder/app/: client.py  main.py
services/builder/mes_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cli.py  test_pk.py
tests_reactors/: test_data_loader.py  test_kinetics_and_reactors.py  test_pfr_and_adiabatic.py
(+11 files in other folders)
