[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mes-api"
version = "0.1.0"
description = "Composable MES FastAPI service"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.5.2",
  "SQLAlchemy==2.0.35",
  "alembic==1.13.2",
  "aiosqlite==0.20.0",
]

[tool.setuptools]
packages = ["mes_api"]

