[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mes-builder"
version = "0.1.0"
description = "Streamlit builder UI for composable MES"
requires-python = ">=3.10"
dependencies = [
  "streamlit==1.38.0",
  "httpx==0.27.2",
  "pydantic==2.8.2",
]

[tool.setuptools]
packages = ["app"]

